--- a/html/gioithieu.html
+++ b/html/gioithieu.html
@@ -4,6 +4,7 @@
 <head>
     <title>Giới thiệu HMK Music & Entertainment</title>
     <link rel="stylesheet" href="../CSS/gioithieu.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -48,7 +49,7 @@
         <p>....</p>
         </p>
         <h4 class="page-title">Liên hệ với chúng tôi </h4>
-        <p>Hotline: 0559149520</p>
+        <p>Điện thoại: 0976025124</p>
         <p>Email: nguyenhoangmy7720044@gmail.com</p>
         <p>Địa chỉ: 142/7A đường số 11, phường 5, Gò Vấp, Hồ Chí Minh</p>
     </main>
@@ -69,7 +70,7 @@
             <div class="footer-section">
                 <h3>Hỗ trợ khách hàng</h3>
                 <ul>
-                    <li><a href="#">Gọi mua hàng: 0559149520 (Miễn Phí)</a></li>
+                    <li><a href="#">Gọi mua hàng: 0976025124 (Miễn Phí)</a></li>
                     <li><a href="#">Thời gian phục vụ: 8h-22h</a></li>
                     <li><a href="#">Liên Hệ / Góp Ý</a></li>
                 </ul>
