--- a/html/giohang.html
+++ b/html/giohang.html
@@ -80,7 +80,7 @@
                 <p style="color: #666; margin-bottom: 20px;">
                     Bao gồm thuế. Miễn phí vận chuyển mọi đơn hàng!
                 </p>
-                <button class="checkout-button">Tiến Hành Đặt Hàng</button>
+                <a href="../html/tienhanhthanhtoan.html" class="checkout-button">Tiến Hành Đặt Hàng</a>
             </div>
         </div>
     </div>
@@ -239,6 +239,7 @@
             updateCartDisplay();
         });
     </script>
+
 </body>
 
 </html>
