--- a/html/tintuc.html
+++ b/html/tintuc.html
@@ -366,7 +366,7 @@
     <header>
         <h1>HMK - Music & Entertainment</h1>
         <p>Nhạc Cụ Hoàng Mỹ | Chất Lượng Uy Tín | Đa Dạng Sản Phẩm</p>
-        <img src="../img/logohmk.jpg" alt="">
+        <a href="../html/Website_BanNhacCu.html"><img src="../img/logohmk.jpg" alt="Logo"></a>
     </header>
 
     <nav>
